Update html copies of notebooks

--- a/databricks.html
+++ b/databricks.html
@@ -14608,6 +14608,8 @@ The empty <code>Artist</code>, <code>Song</code> and <code>Length</code> values 
     <span class="sd">&#39;&#39;&#39;</span>
 <span class="sd">        summary:</span>
 <span class="sd">            Evaluates the performance of a model using the f1-score.</span>
+<span class="sd">            f1-score is chosen as it provides a good balance between</span>
+<span class="sd">            recall and precision.</span>
 <span class="sd">        args:</span>
 <span class="sd">            model - model to be evaluated</span>
 <span class="sd">            data - test data set to use</span>
